[package]
name = "jwaf"
version = "0.1.0"
authors = ["bowrocker <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
futures = "0.3.5"
http = "0.2.1"
http-test-server = "2.1.0"
hyper = "0.13"
hyper-tls = "0.4"
lazy_static = "1.4.0"
mockito = "0.23.3"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
tokio = { version = "0.2", features = ["full"] }
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
slog-term = "2.4.0"
testing_logger = "0.1.1"
ureq = { version = "*", features = ["json"] }